# MMDMLab1

./: 1a.ipynb  1b.ipynb  2.ipynb  2_test_2_dimensions.ipynb  3.ipynb  3_constant_costs.ipynb  3_different_costs.ipynb  LICENSE  Makefile  README.md  cost_example.ipynb  main.tex  nsga_test.ipynb  pyproject.toml  test.ipynb  test_couriers.ipynb  test_multiple_conditions.ipynb
src/: __init__.py  base.py  baseline.py  cost_func.py  crossovers  crossovers.py  mutations.py  nsga.py  state.py  utils.py
